# cv_optimizer

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
context/: current_cv.tex  personal_experience.json  role_description.json
output_cv/: Data_Scientist_Allegro_CV.tex
output_cv/Data_Scientist_Tabby/: Data_Scientist_Tabby_CV.tex  role_description.json
output_cv/Data_scientist_PZU/: Data_scientist_PZU_CV.tex
src/: local_config.py
src/cv_optimizer/: __init__.py  cv_template.py  optimizer.py  personal_experience_loader.py  pipeline.py  prompt_loader.py
src/cv_optimizer/enums/: __init__.py  personal_experience_enums.py  role_description_enums.py
src/cv_optimizer/prompts/: system_prompt.py
src/utils/: __init__.py  api_key.py  file_io.py
